# START_HACK2024

./: .gitignore  README.md  main.py  requirements.txt
database_preprocessing/: README.md  db_preprocessing.py  pyproject.toml  requirements.txt  test.py  test_db_with_prompt.py  test_prompt.py  vector_db_builder.py
database_preprocessing/data/bildung-sport/: data.html
database_preprocessing/data/bildung-sport/berufsbildung/: data.html
database_preprocessing/data/kultur/kulturfoerderung/: data.html
database_preprocessing/data/politik-verwaltung/departemente-und-staatskanzlei/: data.html
database_preprocessing/data/politik-verwaltung/kantonsrat/: data.html
database_preprocessing/data/politik-verwaltung/regierung/: data.html
database_preprocessing/data/recht/unentgeltliche-rechtspflege/: data.html
database_preprocessing/data/sicherheit/haeusliche-gewalt/: data.html
database_preprocessing/data/sicherheit/schweizer-pass-id/: data.html
database_preprocessing/data/steuern-finanzen/finanzaufsicht/: data.html
database_preprocessing/data/ueber-den-kanton-st-gallen/: data.html
database_preprocessing/data/ueber-den-kanton-st-gallen/portraet-des-kantons-st-gallen/: data.html
database_preprocessing/data/ueber-den-kanton-st-gallen/portraet-des-kantons-st-gallen-in-leichter-sprache/: data.html
database_preprocessing/data/ueber-den-kanton-st-gallen/statistik/: data.html
database_preprocessing/data/umwelt-natur/umwelt/: data.html
database_preprocessing/database_preprocessing/: data.csv  vector_db_builder.py
(+3749 files in other folders)
